name:                  ambiata-twine
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              twine
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           twine.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-either
                     , exceptions                      >= 0.6        && < 0.9
                     , ambiata-p
                     , time                            == 1.4.*
                     , transformers                    >= 0.3        && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Twine
                       Twine.Data
                       Twine.Data.Duration
                       Twine.Data.Finalizer
                       Twine.Data.Pin
                       Twine.Snooze
                       Twine.Guard

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-twine
                     , ambiata-disorder-core
                     , ambiata-p
                     , time
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-twine
                     , ambiata-disorder-core
                     , ambiata-p
                     , ambiata-x-either
                     , exceptions
                     , text
                     , time
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
