name:                  ambiata-twine
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              twine
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           twine.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-eithert
                     , async                           == 2.0.*
                     , exceptions                      >= 0.6        && < 0.9
                     , monad-loops                     == 0.4.*
                     , SafeSemaphore                   == 0.10.*
                     , stm                             == 2.4.*
                     , text                            == 1.2.*
                     , time                            == 1.4.*
                     , transformers                    >= 0.3        && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Twine
                       Twine.Data
                       Twine.Data.Duration
                       Twine.Data.Finalizer
                       Twine.Data.Parallel
                       Twine.Data.Pin
                       Twine.Data.Queue
                       Twine.Parallel
                       Twine.Snooze
                       Twine.Guard

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-twine
                     , ambiata-disorder-core
                     , ambiata-p
                     , ambiata-x-eithert
                     , exceptions                      >= 0.6        && < 0.9
                     , text                            == 1.2.*
                     , time
                     , transformers                    >= 0.3        && < 0.5
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-twine
                     , ambiata-disorder-core
                     , ambiata-p
                     , ambiata-x-eithert
                     , exceptions
                     , text
                     , time
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             bench.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-twine
                     , ambiata-p
                     , ambiata-x-eithert
                     , criterion                       == 1.1.*
                     , QuickCheck
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-properties           == 0.1.*
                     , quickcheck-text                 == 0.1.*
                     , random
                     , text
                     , transformers
